v0.7.5 Fixed Issue with Heading Spacing
Fixed issue found with spacing on the about me and projects pages where the spacing for the top part of the header would be different then the rest of the pages.

--- a/docs/css/about-us.css
+++ b/docs/css/about-us.css
@@ -7,8 +7,8 @@
 /* White == #E1E1E1 */
 /* Purple == #FF4BF0 */
 
-h2 {
-  font-size: 125%;
+h2 a {
+  font-size: 112%;
 }
 
 p a {
